--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node server.js",
     "dev": "json-server --watch database.json --port 5000"
   },
-  "dependencies": {
-    "json-server": "^0.17.4",
-    "cors": "^2.8.5"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "multer": "^1.4.5-lts.1",
+  "cors": "^2.8.5",
+  "nanoid": "^3.3.4" 
+}
 }
