--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "pro-json-server",
+  "name": "pro-server-v1",
   "version": "1.0.0",
-  "description": "Professional JSON Server",
+  "description": "Professional JSON & File Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "json-server --watch database.json --port 5000"
+    "dev": "nodemon server.js"
   },
-"dependencies": {
-  "express": "^4.18.2",
-  "multer": "^1.4.5-lts.1",
-  "cors": "^2.8.5",
-  "nanoid": "^3.3.4" 
-}
+  "dependencies": {
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "nanoid": "^3.3.4",
+    "fs-extra": "^11.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
