--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "pro-server-v1",
+  "name": "pro-smart-api",
   "version": "1.0.0",
-  "description": "Professional JSON & File Server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "nanoid": "^3.3.4",
-    "fs-extra": "^11.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.5"
   }
 }
